# openGL-projects

obj2VBO/: CMakeLists.txt  cube.ebo  cube.vbo  main.cpp  objVBO.cpp  objVBO.h  suzanne.ebo  suzanne.vbo  torusKnot.ebo  torusKnot.vbo  triangle.vbo
objLoader/: CMakeLists.txt  VBO.h  main.cpp  note.txt  obj.h
spinningSuzanne/: CMakeLists.txt  EBO.cpp  EBO.h  VAO.h  VBO.cpp  VBO.h  initHelper.h  ljgl.h  main.cpp  model.cpp  model.h  obj.h  object.cpp  object.h  shader.h  shaderClass.cpp  shaderClass.h  suzanne.ebo  suzanne.mtl  suzanne.vbo
spinningSuzanne/GLSL/: shader.frag.glsl  shader.vert.glsl
